[tool.poetry]
name = "robocar"
version = "0.1.0"
description = "Raspberry Pi Robocar software"
authors = ["Benjamin Ashbaugh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
picamera = "^1.13"
numpy = "^1.19.0"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
