[tool.poetry]
name = "robocar-trainer"
version = "0.1.0"
description = "Reinforcement learning and behavioural cloning training program for Robocar"
authors = ["Benjamin Ashbaugh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
